# gentleman

./: .gitignore  PKGBUILD  Readme.md  clean  code.md  gentleman.py  options.py  pyproject.toml  requirements.txt  setup.py
curl/: contribute  download-video.conf  season.json  universal.conf
curl/classroom/: download-audio.conf  playurl.conf  playurl.json  season.conf
gentleman/: BiliBili.py  DownloadError.py  DownloadException.py  __init__.py  __main__.py  _gentleman_error.py  config.py  cookie.py  gentleman.py  http.py  options.py  task.py
gentleman/bilibili/: BiliBili.py  BiliBiliVideo.py  __init__.py  _bilibili_error.py  bili_bili.py  bili_bili_video.py  bilibili_error.py  bilibili_video.py
test/: test_reg.py
vdownload/: BiliBili.py  __init__.py  config.py
