[project]
name = "gentleman"
version = "1.0.0"
authors=[
    {name = "aszswaz", email = "aszswaz@163.com"},
]
description = "video downloader."
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[project.scripts]
gentleman = "gentleman.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
